<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.mychat.MyChatListsActivity">

    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:title="@string/action_new_group"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_profile"
        android:orderInCategory="100"
        android:title="@string/action_my_profile"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_do_you_know"
        android:orderInCategory="100"
        android:title="@string/action_do_you_know"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:animateLayoutChanges="true"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>
